        SS   tt   eeeeee  ll   ll   aaaaa  --  "An Atari 2600 VCS Emulator"
    SS  SS   tt   ee      ll   ll  aa  aa
     SSSS     ttt  eeeee llll llll  aaaaa

===========================================================================
                               Release History
===========================================================================

3.5 to 3.5.1: (January xx, 2012)

  * Fixed bug in sound restructuring introduced in the last release; in
    some cases, there could be some sound 'crackling' when starting a
    ROM after at least one ROM had already been loaded.

  * Fixed bug in 'Fixed Debug Colors' mode; under certain circumstances,
    playfield graphics could be colored as being player graphics.

  * Added ability to modify the SWCHB/SWBCNT port B registers to the
    debugger I/O tab.

  * Added CompuMate bankswitching support to the emulation core;
    the SpectraVision Compumate ROM now works.
    (FIXME - this may not be complete)

  * Added emulation for MindLink controller; Bionic Breakthrough, Mind
    Maze and Telepathy ROMs now work.
    (FIXME - this may not be complete)

-Have fun!


3.4.1 to 3.5: (December 29, 2011)

  * Stella is now DonationWare!  Please see the DonationWare link on the
    main webpage for more information.

  * Added several improvements to the joystick management code.  Joystick
    event mapping is now saved per device, meaning that if you map events
    to a certain joystick device, remove the device and then later insert
    it again, Stella will remember the original mapping.

  * The total number of joysticks present and their associated properties
    (number of axes, buttons and hats) is now dynamic.  That is, there's
    no longer a hard-coded limit on the number of joysticks that Stella
    can use, or the number of buttons, etc that it contains.  This fixes
    a serious bug with PS3 controllers with 27 buttons, whereby adding a
    mapping for joystick 0 would inadvertantly change settings for