@@ -111,7 +111,7 @@ TiaInfoWidget::~TiaInfoWidget()
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 void TiaInfoWidget::handleMouseDown(int x, int y, int button, int clickCount)
 {
-cerr << "TiaInfoWidget button press: x = " << x << ", y = " << y << endl;
+//cerr << "TiaInfoWidget button press: x = " << x << ", y = " << y << endl;
 }
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
